layout shift fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,3 +63,25 @@
 
 
 
+
+
+#home-slider{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    max-height: 100%;
+    overflow: hidden;
+  }
+  #slider-container{
+   
+    height: 100%;
+    display: flex;
+    max-height: 100%;
+    overflow: hidden;
+  
+  }
+  .swiper-slide{
+    width: 100%;
+    
+    display: inline-block;
+  }
